--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
   <!-- Main Content -->
   <main class="content">
     <div class="row about-header">
-      <img src="images/IMG_3506.JPG" alt="Emir McGreevy" class="profile-pic"/>
+      <img src="images/Emir Headshot.PNG" alt="Emir McGreevy" class="profile-pic"/>
       <div class="about-text">
         <h1>About Me</h1>
         <p>
