--- a/resume.html
+++ b/resume.html
@@ -37,16 +37,17 @@
         <main class="resume-container">
             <section class="resume-header">
                 <h1>Emir McGreevy's Resume</h1>
-                <a href="Emir McGreevy Resume v7 (2025).pdf" class="btn" target="_blank">Download PDF</a>
+                <a href="Emir McGreevy Resume v8 (2025).pdf" class="btn" target="_blank">Download PDF</a>
             </section>
 
             <section class="resume-section">
                 <h2>Education</h2>
                 <p><strong>University of Michigan</strong> – College of Literature, Science, and the Arts<br/>
-                    Major: Statistics | Minor: User Experience Design | GPA: 3.47 <br/>
+                    Major: Statistics | Minor: User Experience Design | GPA: 3.5 <br/>
                     Expected Graduation: May 2026</p>
                 <p><strong>Relevant Coursework:</strong></p>
                 <ul class="relevant-coursework">
+                    <li>Sports Analytics</li>
                     <li>Statistics Computing</li>
                     <li>Linear Regression Analysis</li>
                     <li>Theoretical Statistics & Theoretical Probability</li>
@@ -56,7 +57,7 @@
                 </ul>
                
                 <p><br/><strong>Detroit Country Day School</strong><br/>
-                    GPA: 3.88 / 4.00 | Magna Cum Laude | DCDS Scholar Athlete <br/>
+                    GPA: 3.9 / 4.00 | Magna Cum Laude | DCDS Scholar Athlete <br/>
                     Graduation: June 2022 </p>
                 <p><strong>Activities:</strong></p>
                 <ul class="relevant-coursework">
@@ -75,28 +76,35 @@
                 <h2>Extracurricular Experience</h2>
                 <p><strong>Michigan Sports Analytics Society</strong> – General Member</p>
                 <ul class="relevant-coursework">
-                    <li>Designed a website for a local high school’s cross country team using Python, CSS, and HTML. Created roster pages
-                        and individual athlete profiles from provided data that displays race statistics, comments, and season records</li>
-                    <li>Conducted a semester-long research project analyzing how the MLB shift ban affected offensive and defensive
-                        production, which won runner-up at the Michigan Sports Analytics Society Symposium</li>
+                    <li>Conducted a semester-long research project analyzing how the MLB shift ban affected offensive and defensive production, which won runner-up at the Michigan Sports Analytics Society Symposium against 35 other projects</li>
+                    <li>Designed a website for Skyline high school's cross country team using Python, CSS, and HTML. Created roster pages and individual athlete profiles from provided data that displays race statistics, comments, and season records</li>
                 </ul>
 
                 <p><strong>Alpha Delta Pi Sorority</strong> – Formal Events Chair and Risk Committee</p>
                 <ul class="relevant-coursework">
-                    <li>Allocate $51,000 budget across 4 events per year for 400+ attendees, as well as coordinate venue logistics, negotiate
-                        contracts, and arrange transportation, food, and beverage</li>
-                    <li>Ensure adherence to chapter and university policies by training 196 active members on emergency procedures and
-                        creating risk plans for all chapter-wide events</li>
+                    <li>Allocate $51,000 budget across 4 events per year for 400+ attendees, as well as coordinate venue logistics, negotiate contracts, and arrange transportation, food, and beverage</li>
+                    <li>Ensure adherence to chapter and university policies by training 196 active members on emergency procedures and creating risk plans for all chapter-wide events</li>
                 </ul>
             </section>
 
             <section class="resume-section">
                 <h2>Work Experience</h2>
-                <p><strong>University of Michigan Athletics & Human Performance & Sport Science Center</strong><br/>Applied Sports Science Technology Assistant</p>
+                <p><strong>University of Michigan Athletics & Human Performance & Sport Science Center</strong><br/>Lead  Sports Science Technology Assistant</p>
                 <ul class="relevant-coursework">
                     <li>Collect live athlete performance data using Catapult sensors during Michigan Volleyball games and practices</li>
-                    <li>Develop multiple regression models and conduct hypothesis testing to inform team strategy, optimize practice
-                        schedules, and assist player recovery.</li>
+                    <li>Develop multiple regression models and conduct hypothesis testing to inform team strategy, optimize practice schedules, and assist player recovery.</li>
+                    <li>Work alongside athletic trainers and performance analyst to utilize Catapult data to answer questions from coaches</li>
+                </ul>
+
+                <p><br/><strong>Six Labs</strong><br/>Business Analytics Intern</p>
+                <ul class="relevant-coursework">
+                    <li>Built and maintained weekly and monthly performance dashboards in addition to visual summaries to communicate findings and performance metrics to internal leadership</li>
+                    <li>Analyze sales and product performance data using Excel and Hoodie Analytics to identify trends and opportunities for growth. Monitor wholesale activity and inform demand planning with CRMs such as Leaf Link and Leaf Trade</li>
+                </ul>
+
+                <p><br/><strong>Michael Coglianese CPA, P.C.</strong><br/>Business Intelligence Intern</p>
+                <ul class="relevant-coursework">
+                    <li>Helped streamline the CRM through various tasks like creating templates for different engagement letters to allow better preparation for tax season</li>
                 </ul>
 
                 <p><br/><strong>Archrival Agents, Inc.</strong><br/>Brand Ambassador Event Lead</p>
